--- a/src/exercise1/start/FlagFacts/MainPage.xaml
+++ b/src/exercise1/start/FlagFacts/MainPage.xaml
@@ -3,8 +3,17 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:FlagFacts"
              xmlns:eff="clr-namespace:FlagFacts.Effects"
+             xmlns:data="clr-namespace:FlagData;assembly=FlagData"
+             xmlns:cvt="clr-namespace:FlagFacts.Converters"
              x:Class="FlagFacts.MainPage"
              Title="Fun with Flags">
+
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <cvt:EmbeddedImageConverter x:Key="irConverter"
+                    ResolvingAssemblyType="{x:Type data:Flag}" />
+        </ResourceDictionary>
+    </ContentPage.Resources>
 
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Previous"
@@ -25,21 +34,23 @@
                 </OnPlatform>
             </StackLayout.Padding>
 
-            <Image x:Name="flagImage" HeightRequest="200" 
-                    HorizontalOptions="Center"
-                    VerticalOptions="Center"
-                    Aspect="AspectFit" />
+            <Image HeightRequest="200"
+        Source="{Binding ImageUrl, Mode=OneWay, Converter={StaticResource irConverter}}"
+        HorizontalOptions="Center"
+        VerticalOptions="Center"
+        Aspect="AspectFit" />
 
-            <Picker x:Name="country" />
+            <Picker x:Name="country" SelectedItem="{Binding Country}" />
 
             <Label Text="Current Design was Adopted on" FontAttributes="Bold" />
-            <DatePicker x:Name="adopted" MinimumDate="01/01/1700" HorizontalOptions="Start" />
+            <DatePicker x:Name="adopted" MinimumDate="01/01/1700" HorizontalOptions="Start"
+            Date="{Binding DateAdopted}" />
 
             <Label Text="Has Shield" FontAttributes="Bold" />
-            <Switch x:Name="hasShield" />
+            <Switch x:Name="hasShield" IsToggled="{Binding IncludesShield}" />
 
             <Label Text="Fun Fact" FontAttributes="Bold" />
-            <Label x:Name="description" />
+            <Label x:Name="description" Text="{Binding Description}" /> 
 
             <Label x:Name="moreInfo" Text="More Information" Margin="0,0,10,0"
                     TextColor="Blue" HorizontalOptions="End">
